--- a/Labs/LaTeX/LatexHowTo/how_to_latex.tex
+++ b/Labs/LaTeX/LatexHowTo/how_to_latex.tex
@@ -1,5 +1,6 @@
-\documentclass{tufte-book}
+\documentclass[justified]{tufte-book} %justified ovverides the rugged-right style
 
+\usepackage{graphicx}
 \usepackage{color}
 \usepackage{xcolor}
 \usepackage{framed}
@@ -24,22 +25,23 @@ framerule=0.4pt,
 framesep=3pt,
 xleftmargin=3.4pt,
 xrightmargin=3.4pt,
-basicstyle=\normalfont,
+basicstyle=\normalfont\scriptsize,
 keywordstyle=\color{blue}\sffamily,                                
 identifierstyle=\color{black},
 numbersep=5mm, 
 numbers=left, 
 numberstyle=\tiny,
-morekeywords = {
-maketitle, 
-tableofcontents}  
+morekeywords = {maketitle, tableofcontents, subsection, 
+				citet, cite, citep, bottomrule, toprule,
+				midrule, addlinespace, includegraphics, 
+				bibpunct, definecolor, hypersetup}  
 }
 
-\setcounter{secnumdepth}{1}
+
 
 
 \title{How to use LaTeX for scientific purposes}
-\author{Jan Paul Bauche}
+\author{Research Skills}
 
 
 
@@ -50,17 +52,21 @@ tableofcontents}
 \null
 \vfill
 \begin{fullwidth}
-\LARGE{This Tutorial was created for the Module "Research Skills" in the M.Sc. program "Environmental Sciences" at the Faculty of Environment and Natural Resources, Albert-Ludwigs-Universit\"at Freiburg . Its creation was funded through the Hochschule 2020 program.}
+\LARGE{This Tutorial was created by Paul Bauche for the Module "Research Skills" in the M.Sc. program "Environmental Sciences" at the Faculty of Environment and Natural Resources, Albert-Ludwigs-Universit\"at Freiburg . Its creation was funded through the Hochschule 2020 program.}
 \end{fullwidth}
 \tableofcontents
 
 \chapter{Introduction}
+\begin{fullwidth}
+This short script is supposed to help you start your first document in \LaTeX. You will learn how to set up your document as a scientific article, how to include graphics and tables as well as formulas. You will learn to set up a decent structure for your article, to easily include your citations and how to link references within your article.
 
-This short script is supposed to help you start your first document in \LaTeX. You will learn how to set up your document as a scientific article, how to include graphics and tables as well as formulas. You will learn to set up a decent structure for your article, to easily include your citations and how to link references within your article.\\
-
+ \LaTeX is a script based typesetting program that allows you to set the design of your report, article, book or whatever written statement via written commands. This may appear a bit cryptic in the beginning but after a short time of getting used to this way of working you will realize how much time this can save you and how much nicer and more professional your documents look. Basically when it comes to typesetting software there are two distinguishable types.
+ 
+The first and most common is called \emph{"What You See Is What You Get"} (WYSIWYG). this describes Software such as Open Office, Microsoft Word etc. where you can see how your document is going to look in the end while you are working on it but it might be difficult to create a document exactly the way you wanted it to be. The second type is called \emph{"What You Get Is What You Want"}(WYGIWYW). This is the category \LaTeX belongs to. It means that while you are working on your  document you do not get a visual representation of the final result but your final result will be the way you imagined it when you started.  	
+\end{fullwidth}
 \chapter{Before you start}
 
-First you need to set up \LaTeX on your computer. In this tutorial we will be using the free \LaTeX editor TexMaker. It is available for all common platforms but some settings may wary. Here we are using TexMaker for Windows. To set up \LaTeX you first need to install the right distribution. This would be the latest version of MikTex for Windows. Search for it on the web then download and install it on your computer. afterwards do the same for TexMaker. You can use any other software you like but we can not cover the settings and options for all those so you will need to figure those out on your own.
+First you need to set up \LaTeX on your computer. In this tutorial we will be using the free \LaTeX editor TexMaker. It is available for all common platforms but some settings may wary. Here we are using TexMaker for Windows. To set up \LaTeX you first need to install the right distribution. This would be the latest version of MikTex for Windows. Search for it on the web then download and install it on your computer. afterwards do the same for TexMaker. You can use any other software you like but this tutorial can not cover the settings and options for all those so you will need to figure them out on your own.
   
 Before you start your project you have to keep a couple of things in mind that will later on help you to keep track of what you are doing and to avoid unnecessary errors.
  
@@ -70,13 +76,22 @@ First of create a folder on your computer and make sure that you have the necess
  
 When creating the folder and all following files make sure you do not use spaces or\marginnote{No spaces or special symbols in file- or folder-names anywhere in your file path!} special symbols. Nowhere in the path to your files should be any of those symbols. Stick to letters, numbers and underscores or scores. 
 
+In TexMaker you have several options to configure the user interface. The most important ones shall be explained briefly. 
+
+It is advisable to set the spell check to the language you want to write your article in. You can do that under "Options -> Configure TexMaker -> Editor -> Spelling Dictionary". The most common languages are already part of your software and you can just choose the one you need.  
+
+Here you can also choose the text format of your editor. It is recommended to use UTF-8.
+
+Under "Options -> Interface Language" you can choose the language for TexMaker. This does not affect the spell check but is solely for your convenience.  
+
+
 \chapter{First steps}
 
 Now that you have created your project folder you can create your first \LaTeX document. Navigate to your project folder and create a new text file. Open this file and type the following line:\\[5pt]
 
 \emph{\% This is my first Latex document. There are many documents like this but this one is mine.}\\[5pt]
 
-Make sure you do not forget the \%. Then save your document as \verb!my_first_article.tex! and close the editor. With the extension .tex you make sure that your system recognizes the file as a \LaTeX document.\\\marginnote{The \% symbol is used for comments, lines of text that are not interpreted by \LaTeX}
+Make sure you do not forget the \%. Then save your document as \verb!my_first_article.tex! and close the editor. With the extension .tex you make sure that your system recognizes the file as a \LaTeX document.\marginnote{The \% symbol is used for comments, lines of text that are not interpreted by \LaTeX!}
 Now open \verb!my_first_article.tex! with your \LaTeX editor (e.g. Texmaker). You will notice that the line you wrote now looks gray.\\[5pt]
 \begin{fullwidth}
 \begin{lstlisting}
@@ -89,9 +104,9 @@ The gray color symbolizes a \emph{comment} the comment is declared by using the 
 
 To start of your actual document you first need to declare the type of document you want to create. This is done in the so called "Header" of the file. There you can also declare additional options and include packages to increase the functionality of \LaTeX.
 
-For the purpose of this tutorial you are going to create a scientific article. This type of document is declared by the command \verb!\documentclass{article}!. This defines a few design characteristics like line spacing and the width of the borders of the page for your document. the \verb!\! is used to indicate to \LaTeX that the following is a command. In \LaTeX commands are used for everything from setting your font type to including pictures or graphics.  
+For the purpose of this tutorial you are going to create a scientific article. This type of document is declared by \verb!\documentclass{article}!. This defines a few design characteristics like line spacing and the width of the borders of the page for your document. the \verb!\! is used to indicate to \LaTeX that the following is a command. In \LaTeX commands are used for everything from setting your font type to including pictures or graphics.  
 
-Now you can begin with your document.\marginnote{Every \emph{begin} statement requires an \emph{end} statement} To do so you start with the line \verb!\begin{document}!
+Now you can begin with your document.\marginnote{Every \emph{begin} statement requires an \emph{end} statement!} To do so you start with the line \verb!\begin{document}!
 This should result in 2 lines being created in addition to \verb!\begin{document}! there should also be a line saying \verb!\end{document}!. If this is not the case just type it yourself. Now  you should have a document looking like this:\\[5pt]
 
 \begin{fullwidth}
@@ -168,7 +183,7 @@ Compile your document to notice the effect of the new commands. \verb!\textbf{}!
 
 \chapter{The header}
 
-As aforementioned your document has a header.\marginnote{In the header you can include new packages and set general parameters and meta data for your document!} The header is everything you write before the \verb!\begin{document}! statement.Here you declare the packages you want to use, define styles and you can add some meta data to your document. Such as the author or the title of your article. These two are added by using the \verb!\author{}! and \verb!\title{}! commands. Add them to your document right below \verb!\documentclass{article}! and write a title in the wavy brackets after title and your name in the wavy brackets after author and compile again. There should be no noticeable difference. Now right under the \verb!\begin{document}! statement add \verb!\maketitle! and compile again. Your pdf document should now have a title, your name and the current date at the top. The \verb!\maketitle! command uses the information you provided in the header to create a title for your article. If everything worked your \LaTeX document should now look like this:\\[5pt]
+As aforementioned your document has a header.\marginnote{In the header you can include new packages and set general parameters and meta data for your document!} The header is everything you write before the \verb!\begin{document}! statement.Here you declare the packages you want to use, define styles and you can add some meta data to your document. Such as the author or the title of your article. These two are added by using the \verb!\author{}! and \verb!\title{}! commands. Add them to your document right below the \verb!\documentclass{}! command and write a title in the wavy brackets after title and your name in the wavy brackets after author and compile again. There should be no noticeable difference. Now right under the \verb!\begin{document}! statement add \verb!\maketitle! and compile again. Your pdf document should now have a title, your name and the current date at the top. The \verb!\maketitle! command uses the information you provided in the header to create a title for your article. If everything worked your \LaTeX document should now look like this:\\[5pt]
 
 \begin{fullwidth}
 \begin{lstlisting}
@@ -198,7 +213,13 @@ Test
 \end{fullwidth}
 
 \chapter{Equations in \LaTeX}
-Here you will learn how to write equations in \LaTeX. There are two basic types of equations. First there are inline equations which can be used to write down basic mathematical expressions and equations within your text. Second are the numbered equations. They will appear separated from your text and will be numbered which allows you to easily reference the equation later on in your text. You can use this to write down more complex equations or expressions. As an exercise you can now create those two types within your own document and put them in a new section named "Equations". You will start with an inline equation. An inline equation is framed by \$ symbols to separate it from the rest of the text. For this purpose start a new subsection called "Inline Equations" a subsection can be created with the \verb!\subsection{}! command. Your first inline equations will be \verb!$\alpha = 3.5$. and $\lambda = \sqrt{\alpha}$!. To emphasize the inline effect put a short sentence before the equations. As you can see Greek letters can be written by typing a \verb!\! before the full name of the letter. Additionally the \verb!\sqrt{}! command is used for the square root symbol. Your document should now look like this:\\[5pt]   
+Here you will learn how to write equations in \LaTeX. There are two basic types of equations. First there are inline equations which can be used to write down basic mathematical expressions and equations like $\alpha = 3.5$. or $\lambda = \sqrt{\alpha}$ within your text. Second are the numbered equations. They will appear separated from your text like this:
+
+\begin{equation} 
+\lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
+\end{equation}
+
+They will be numbered (in this case as the first equation in chapter six) which allows you to easily reference the equation later on in your text. You can use this to write down more complex equations or expressions. As an exercise you can now create those two types within your own document and put them in a new section named "Equations". You will start with an inline equation. An inline equation is framed by \$ symbols to separate it from the rest of the text. For this purpose start a new subsection called "Inline Equations" a subsection can be created with the \verb!\subsection{}! command. Your first inline equations will be \verb!$\alpha = 3.5$. and $\lambda = \sqrt{\alpha}$!. To emphasize the inline effect put a short sentence before the equations. As you can see Greek letters can be written by typing a \verb!\! before the full name of the letter. Additionally the \verb!\sqrt{}! command is used for the square root symbol. Your document should now look like this:\\[5pt]   
 
 \begin{fullwidth}
 \begin{lstlisting}
@@ -274,7 +295,7 @@ This is our second numbered equation.
  
 \begin{equation} 
 \lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
-\end{equation}!.\\
+\end{equation}.\\
 
 \end{document} 
 \end{lstlisting}
@@ -283,7 +304,17 @@ This is our second numbered equation.
 As you can see there are a lot of new symbols added but if you look at them they are pretty self explanatory. \verb!\infty! is used for the infinity symbol $\infty$ , \verb!\frac{}{}! is used for fractions such as $\frac{x}{y}$ and \verb!\cdot! is used for the multiplication dot $\cdot$. A bit more complicated is \verb!\int! it is used for integrals the lower bound is indicated by an underscore " \_ " and the upper bound by the  \^. The full expression for an integral is respectively \verb!\int_x^y! which then looks like $\int_x^y$. Brackets can be placed with the commands \verb!\left(! and \verb!\right)!. 
 
 \chapter{Labels and referencing}
-When adding graphs, tables, pictures or equations to your document\marginnote{Labels and references are important for you and for others to easily link written information to graphic content!} it is common to number reference these to allow the reader to easily connect your text to the respective visualization. In addition you might also want to reference sections to be able to later refer to them. The numbering is done automatically by latex for all these types. To reference them in your document you just need to label them. The commands used for this purpose are \verb!\label{}! and \verb!\ref{}!. You assign a specific label to the aspect you want reference later on by simply placing \verb!\label{}! behind the object you want to reference. Here it is common to use a short prefix to indicate the type of object you want to label such as \emph{sec} for sections, \emph{fig} for figures, \emph{tab} for tables\marginnote{Use abbreviated prefixes to quickly identify your labels!} and so on. This makes it easy to distinguish between different objects connected to the same topic (e.g. a graph and a table displaying the same kind of data). As a quick exercise you are now going to label your numbered equations and the introduction section and reference them in a new section called \emph{Labels and referencing}. Do so by placing a label behind the \verb!\section{}! and the \verb!\begin{equation}! statements. The label you assign here is just for you so you can distinguish it from the others the \verb!\ref{}! command only returns the number of the object. To reference your labels simply type \verb!\ref{}! with the label you assigned within the wavy brackets. Your document should now look like this:\\[5pt]
+When adding graphs, tables, pictures or equations to your document\marginnote{Labels and references are important for you and for others to easily link written information to graphic content!} it is common to number reference these to allow the reader to easily connect your text to the respective visualization. In addition you might also want to reference sections to be able to later refer to them. The numbering is done automatically by latex for all these types. To reference them in your document you just need to label them. The commands used for this purpose are \verb!\label{}! and \verb!\ref{}!. You assign a specific label to the aspect you want reference later on by simply placing \verb!\label{}! behind the object you want to reference. Here it is common to use a short prefix to indicate the type of object you want to label such as \emph{sec} for sections, \emph{fig} for figures, \emph{tab} for tables\marginnote{Use abbreviated prefixes to quickly identify your labels!} and so on. This makes it easy to distinguish between different objects connected to the same topic (e.g. a graph and a table displaying the same kind of data). You can also make your references interactive. This means you can link your references to the actual content to make navigating the pdf even easier. To do so you need to include the \emph{hyperref} package into your document header. You can then use the \verb!\hypersetup! command to define the formatting of your references. Here we colored them in  dark blue. to see how this is done look at the following lines of code:
+
+\begin{lstlisting}
+\usepackage[]{hyperref}
+\definecolor{darkblue}{rgb}{0,0,.5}
+\hypersetup{colorlinks=true, breaklinks=true, 
+linkcolor=darkblue, menucolor=darkblue, 
+urlcolor=darkblue, citecolor=darkblue}
+\end{lstlisting}
+
+As a quick exercise you are now going to label your numbered equations and the introduction section and reference them in a new section called \emph{Labels and referencing}. Do so by placing a label behind the \verb!\section{}! and the \verb!\begin{equation}! statements. The label you assign here is just for you so you can distinguish it from the others the \verb!\ref{}! command only returns the number of the object. To reference your labels simply type \verb!\ref{}! with the label you assigned within the wavy brackets. Your document should now look like this:
 
 \begin{fullwidth}
 \begin{lstlisting}
@@ -326,12 +357,8 @@ This is our second numbered equation.
 \lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
 \end{equation}!.\\
 
-\end{document}
-
 \section{Labels and referencing}
 In LaTeX, everything can be labeled, and after that it can be referenced. Consider for example section~\ref{sec: equations}, where eq.~\ref{eq: definition of lambda} and eq.~\ref{eq: definition of m} are defined.
-
-
 
 \end{document}  
 \end{lstlisting}
@@ -343,7 +370,10 @@ The easiest way to include figures into your document is by placing the file con
 
 To include images into your \LaTeX document you first need to define a figure space. This can be achieved by using the \verb!\begin{figure}! and \verb!\end{figure}! statements. In between these statements you can now include your image and add a caption to it to briefly summarize what is displayed here. To do so you need the \verb!\includegraphics[scale=]{}!, with the name or file path of the image to include without the file extension, and \verb!\caption{}! commands. Most of the time you want your image to be displayed in the center of the lines your placing it in. For that you can use the command \verb!\centering! one line above the  \verb!\includegraphics[scale=]{}! statement.
 
-There should be two image files in your training material. A picture of Albert Einstein in his study and a boxplot graph. Include them into your document. They should be 6 cm wide. You can set the width in the square brackets by typing \emph{width = 6 cm}. To include two pictures side by side just put them into the same figure just make sure to set their width to 3 cm. For each figure you just need one caption even if it induces several images. And do not forget to label your figures.   
+There should be two image files in your training material. A picture of Albert Einstein in his study and a boxplot graph. Include them into your document. They should be 6 cm wide. \begin{marginfigure}
+\includegraphics[width=4cm]{einstein}
+\caption{This photograph by Ferdinand Schmutzer shows Einstein in his study}
+\end{marginfigure}You can set the width in the square brackets by typing \emph{width = 6 cm}. To include two pictures side by side just put them into the same figure just make sure to set their width to 3 cm. For each figure you just need one caption even if it induces several images. And do not forget to label your figures.   
 Your document should now look like this:\\[5pt]
 
 \begin{fullwidth}
@@ -390,9 +420,8 @@ This is our second numbered equation.
 \lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
 \end{equation}!.\\
 
-\end{document}
-
 \section{Labels and referencing}
+
 In LaTeX, everything can be labeled, and after that it can be referenced. Consider for example section~\ref{sec: equations}, where eq.~\ref{eq: definition of lambda} and eq.~\ref{eq: definition of m} are defined.
 
 \section{Including figures}
@@ -523,9 +552,8 @@ This is our second numbered equation.
 \lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
 \end{equation}!.\\
 
-\end{document}
-
 \section{Labels and referencing}
+
 In LaTeX, everything can be labeled, and after that it can be referenced. Consider for example section~\ref{sec: equations}, where eq.~\ref{eq: definition of lambda} and eq.~\ref{eq: definition of m} are defined.
 
 \section{Including figures}
@@ -542,7 +570,6 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 \includegraphics[width=3cm]{einstein}
 \caption{This shows Einstein in his study}\label{fig: einstein2}
 \end{figure}  
-
 
 \begin{figure}
 \centering
@@ -561,10 +588,7 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 \hline 
 \end{tabular} 
 
-
 \subsection{Proper table}
-
-
 \begin{table*}\label{Table: Fit types}
   \centering
   \begin{tabular}{l@{\hspace{0.2cm}}l@{\hspace{0.2cm}}l} \toprule
@@ -582,15 +606,15 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 \caption{Table caption}
 \end{table*}
 
+\end{document}
 \end{lstlisting}
 \end{fullwidth}
 
 
 \chapter{References in \LaTeX}
 
-In every scientific article it is important to clearly state your sources. You need to cite within your article and list all used sources at the end within your bibliography. For this purpose \LaTeX provides you with a link to the BibTeX format. You can easily include your BibTex database into your document and link your sources. This requires you to locate your database inside your project folder similar to your pictures and graphics. now you can include this database by using the command \verb!\bibliography{}! at the end of your document, with the name of your database in the wavy brackets. The style of your bibliography is determined by the \verb!\bibliographystyle{}! command before the \verb!\bibliography{}! command and the name of the style file in the wavy brackets. Here we use the \emph{chicago} citation style. To fully integrate the database into you \LaTeX file you need to compile Bibtex as well as \LaTeX at least two times. This process is still slightly faulty and it might require more compilation attempts until everything works properly. Also make sure you are using the correct formatting (e.g. UTF-8). Once everything is set you can reference your sources within your document using the \verb!\citep{}! and \verb!\cite{}! commands. The classical citation command is \verb!\citep{}!. It leads to your cited source enclosed in brackets while \verb!\cite{}! only puts the date of the citation in brackets allowing for an in-text citation. Once you cite a source in your document it will be listed in your bibliography as well. In this tutorial it is the last step but it is generally advisable to set up your bibliography at the beginning for your project to make citing fluent and to avoid mistakes. Now add a chapter about citations to your document and after that add your bibliography. A literature database is supplied in your training material. To make your citations look nicer and allow for more options include the \emph{natbib} package in your document. You can adjust the punctuation of your references by using the \verb!\bibpunct! command in your header. After including the \emph{natbib} package add the following line:\\
-\verb!\bibpunct{(}{)}{;}{a}{}{,} !\\ 
-
+In every scientific article it is important to clearly state your sources. You need to cite within your article and list all used sources at the end within your bibliography. For this purpose \LaTeX provides you with a link to the BibTeX format. You can easily include your BibTex database into your document and link your sources. This requires you to locate your database inside your project folder similar to your pictures and graphics. now you can include this database by using the command \verb!\bibliography{}! at the end of your document, with the name of your database in the wavy brackets. The style of your bibliography is determined by the \verb!\bibliographystyle{}! command before the \verb!\bibliography{}! command and the name of the style file in the wavy brackets. Here we use the \emph{chicago} citation style. To fully integrate the database into you \LaTeX file you need to compile Bibtex as well as \LaTeX at least two times.\marginnote{To get your bibTex file into your document make sure you use the same format. You might need to compile bibTex and \LaTeX several times until everything is up and running!} This process is still slightly faulty and it might require more compilation attempts until everything works properly. Also make sure you are using the correct formatting (e.g. UTF-8). Once everything is set you can reference your sources within your document using the \verb!\citep{}! and \verb!\cite{}! commands. The classical citation command is \verb!\citep{}!. It leads to your cited source enclosed in brackets while \verb!\cite{}! and \verb!\citet{}! only put the date of the citation in brackets allowing for an in-text citation. Once you cite a source in your document it will be listed in your bibliography as well. In this tutorial it is the last step but it is generally advisable to set up your bibliography at the beginning for your project to make citing fluent and to avoid mistakes. Now add a chapter about citations to your document and after that add your bibliography. A literature database is supplied in your training material. To make your citations look nicer and allow for more options include the \emph{natbib} package in your document. You can adjust the punctuation of your references by using the \verb!\bibpunct! command in your header. After including the \emph{natbib} package add the following line:\\
+\verb!\bibpunct{(}{)}{;}{a}{}{,}!
 \noindent Now everything is set for you to compile your document and have a look at your citations and your bibliography. Your \LaTeX file should now look like this:
 
 
@@ -647,9 +671,8 @@ This is our second numbered equation.
 \lambda = \int_{m_0}^\infty f(\Theta) d \Theta 
 \end{equation}!.\\
 
-\end{document}
-
 \section{Labels and referencing}
+
 In LaTeX, everything can be labeled, and after that it can be referenced. Consider for example section~\ref{sec: equations}, where eq.~\ref{eq: definition of lambda} and eq.~\ref{eq: definition of m} are defined.
 
 \section{Including figures}
@@ -685,10 +708,7 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 \hline 
 \end{tabular} 
 
-
 \subsection{Proper table}
-
-
 \begin{table*}\label{Table: Fit types}
   \centering
   \begin{tabular}{l@{\hspace{0.2cm}}l@{\hspace{0.2cm}}l} \toprule
@@ -710,13 +730,21 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 
 Referenced are extremely important \citep[see also][for more references]{Gintis-Costlysignalingand-2001,Archetti-Economicgametheory-2011}. However \citet{Cooper-CommunicationInCoordination-1992} note that this is not the case. 
 
-
 \bibliographystyle{chicago} 
-
 
 \bibliography{yourbibtexfile}
 
+\end{document}
 \end{lstlisting}
 \end{fullwidth}
+
+\chapter{Going further}
+
+While expanding your document or when creating a new one you will probably get to a point where you want to do something that has not been covered by this tutorial. Here are some sources for additional information and help.
+
+The first\marginnote{When you encounter problems with \LaTeX search engines and forums are your best friends!} thing to do is to search for a solution on the web. \LaTeX has a very active community and most of the things you want to do will have already been done by someone and posted in some forum or wiki.
+
+Second you can find so called "cheat sheets" (just search for them online) these are short scripts which list most of the functions and commands with a short explanation about what they do and how they are used.
+
 
 \end{document}
